20210701 단어추가 페이지

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -9,7 +9,7 @@
         </header>
         <p>토익 공부하다가 만들어보고 싶어서 만들었습니다</p>
         <ul class="actions">
-            <li><a href="/api/words/posts" class="button big">바로가기</a></li>
+            <li><a href="/api/words/list" class="button big">바로가기</a></li>
         </ul>
     </div>
     <span class="image object">
