--- a/src/main/resources/templates/wordlist.mustache
+++ b/src/main/resources/templates/wordlist.mustache
@@ -41,7 +41,7 @@
     </ul>
     <br/>
     <ul class="actions">
-        <li><a href="#" class="button primary">단어 업로드</a></li>
+        <li><a href="/api/words/savePage" class="button primary">단어 업로드</a></li>
         <li><a href="#" class="button icon solid fa-download">엑셀 업로드</a></li>
     </ul>
 </div>
