20210701 토익단어장 구현(검색,페이징 추가 구현 필요)

--- a/src/main/resources/templates/layout/sidebar.mustache
+++ b/src/main/resources/templates/layout/sidebar.mustache
@@ -21,7 +21,7 @@
                 <li>
                     <span class="opener">토이 프로젝트</span>
                     <ul>
-                        <li><a href="/api/words/posts">단어장</a></li>
+                        <li><a href="/api/words/list">단어장</a></li>
                     </ul>
                 </li>
             </ul>
@@ -55,6 +55,6 @@
 <script src="/assets/js/breakpoints.min.js"></script>
 <script src="/assets/js/util.js"></script>
 <script src="/assets/js/main.js"></script>
-
+<script src="/assets/js/index.js"></script>
 </body>
 </html>
