--- a/src/main/resources/templates/savepage.mustache
+++ b/src/main/resources/templates/savepage.mustache
@@ -1,30 +1,22 @@
 {{>layout/header}}
+<br/>
 <!-- Form -->
-<h3>Form</h3>
-
 <form method="post" action="#">
     <div class="row gtr-uniform">
         <div class="col-6 col-12-xsmall">
-            <input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+            <input type="text" name="demo-name" id="demo-word" value="" placeholder="단어" />
         </div>
         <div class="col-6 col-12-xsmall">
-            <input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+            <input type="text" name="demo-name" id="demo-meaning" value="" placeholder="의미" />
         </div>
-        <!-- Break -->
-        <div class="col-12">
-            <select name="demo-category" id="demo-category">
-                <option value="">- Category -</option>
-                <option value="1">Manufacturing</option>
-                <option value="1">Shipping</option>
-                <option value="1">Administration</option>
-                <option value="1">Human Resources</option>
-            </select>
+        <div class="col-6 col-12-xsmall">
+            <input type="text" name="demo-name" id="demo-category" value="" placeholder="Category" />
         </div>
+
         <!-- Break -->
         <div class="col-12">
             <ul class="actions">
-                <li><input type="submit" value="Send Message" class="primary" /></li>
-                <li><input type="reset" value="Reset" /></li>
+                <li><input type="button" value="등록하기" id = "btn-save" class="primary" /></li>
             </ul>
         </div>
     </div>
