20210701 토익단어장 구현(검색,페이징 추가 구현 필요)

--- a/src/main/resources/templates/wordlist.mustache
+++ b/src/main/resources/templates/wordlist.mustache
@@ -1,7 +1,7 @@
 {{>layout/header}}
 <br/>
 <div class="col-12">
-    <select name="demo-category" id="demo-category">
+    <select name="demo-category" id="word-category">
         <option value="">- 파트선택 -</option>
         {{#posts}}
         <option value="{{category}}">{{category}}</option>
