20210706 채팅창 만들어봄

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -24,11 +24,11 @@
     </header>
     <div class="posts">
         <article>
-            <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-            <h3>Interdum aenean</h3>
-            <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+            <a href="/api/chat/list" class="image"><img src="images/pic01.jpg" alt="" /></a>
+            <h3>웹소켓을 이용한 채팅</h3>
+            <p>업무중에 채팅기능 한번 탐구해보라고 해서 만들어봤습니다.</p>
             <ul class="actions">
-                <li><a href="#" class="button">More</a></li>
+                <li><a href="/api/chat/list" class="button">바로가기</a></li>
             </ul>
         </article>
         <article>
