--- a/src/main/resources/templates/layout/sidebar.mustache
+++ b/src/main/resources/templates/layout/sidebar.mustache
@@ -22,6 +22,7 @@
                     <span class="opener">토이 프로젝트</span>
                     <ul>
                         <li><a href="/api/words/list">단어장</a></li>
+                        <li><a href="/api/chat/list">웹채팅창</a></li>
                     </ul>
                 </li>
             </ul>
@@ -56,5 +57,6 @@
 <script src="/assets/js/util.js"></script>
 <script src="/assets/js/main.js"></script>
 <script src="/assets/js/index.js"></script>
+<script src="/assets/js/chat.js"></script>
 </body>
 </html>
