20210824 1차 완성본 스웨거 추가

--- a/src/main/resources/templates/layout/sidebar.mustache
+++ b/src/main/resources/templates/layout/sidebar.mustache
@@ -5,11 +5,11 @@
     <div class="inner">
 
         <!-- Search -->
-        <section id="search" class="alt">
+<!--        <section id="search" class="alt">
             <form method="post" action="#">
                 <input type="text" name="query" id="query" placeholder="Search" />
             </form>
-        </section>
+        </section>-->
 
         <!-- Menu -->
         <nav id="menu">
@@ -31,9 +31,9 @@
         <!-- Section -->
         <section>
             <header class="major">
-                <h2>관심있나요?</h2>
+                <h2>정보</h2>
             </header>
-            <p>내 메일이랑 깃허브 주소입니다.</p>
+            <p>메일과 깃허브 주소입니다.</p>
             <ul class="contact">
                 <li class="icon solid fa-envelope"><a href="cws070993@gmail.com">cws070993@gmail.com</a></li>
                 <li class="icon brands fa-github"><a href="https://github.com/sky7214sky72?tab=repositories">https://github.com/sky7214sky72?tab=repositories</li>
