--- a/src/main/resources/templates/savepage.mustache
+++ b/src/main/resources/templates/savepage.mustache
@@ -9,14 +9,15 @@
         <div class="col-6 col-12-xsmall">
             <input type="text" name="demo-name" id="demo-meaning" value="" placeholder="의미" />
         </div>
-        <div class="col-6 col-12-xsmall">
+<!--        <div class="col-6 col-12-xsmall">
             <input type="text" name="demo-name" id="demo-category" value="" placeholder="Category" />
-        </div>
+        </div>-->
 
         <!-- Break -->
         <div class="col-12">
             <ul class="actions">
                 <li><input type="button" value="등록하기" id = "btn-save" class="primary" /></li>
+                <li><input type="button" value="돌아가기" id = "btn-back" class="primary" /></li>
             </ul>
         </div>
     </div>
