--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -13,7 +13,7 @@
         </ul>
     </div>
     <span class="image object">
-	    <img src="images/pic10.jpg" alt="" />
+	    <img src="images/wordPic.jpg" alt="단어장" />
 	</span>
 </section>
 
@@ -24,14 +24,14 @@
     </header>
     <div class="posts">
         <article>
-            <a href="/api/chat/list" class="image"><img src="images/pic01.jpg" alt="" /></a>
+            <a href="/api/chat/list" class="image"><img src="images/socketChat.jpg" alt="채팅" /></a>
             <h3>웹소켓을 이용한 채팅</h3>
             <p>업무중에 채팅기능 한번 탐구해보라고 해서 만들어봤습니다.</p>
             <ul class="actions">
                 <li><a href="/api/chat/list" class="button">바로가기</a></li>
             </ul>
         </article>
-        <article>
+<!--        <article>
             <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
             <h3>Nulla amet dolore</h3>
             <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
@@ -70,7 +70,7 @@
             <ul class="actions">
                 <li><a href="#" class="button">More</a></li>
             </ul>
-        </article>
+        </article>-->
     </div>
 </section>
 {{>layout/sidebar}}
