20210920 페이지 이동 기능 추가 구글,네이버 로그인 기능 내일 추가

--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -1556,6 +1556,18 @@ button,
     background-color: #f56a6a;
     box-shadow: none;
     color: #ffffff !important; }
+input[type="button"].google,
+button.google,
+.button.google {
+  background-color: #4285F4;
+  box-shadow: none;
+  color: #ffffff !important; }
+input[type="button"].naver,
+button.naver,
+.button.naver {
+  background-color: #1EC800;
+  box-shadow: none;
+  color: #ffffff !important; }
     input[type="submit"].primary:hover,
     input[type="reset"].primary:hover,
     input[type="button"].primary:hover,
