--- a/src/main/resources/templates/layout/sidebar.mustache
+++ b/src/main/resources/templates/layout/sidebar.mustache
@@ -18,20 +18,21 @@
             </header>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li>
+                <li><a href="/">학습현황</a></li>
+<!--                <li>
                     <span class="opener">토이 프로젝트</span>
                     <ul>
                         <li><a href="/api/words/list">단어장</a></li>
                         <li><a href="/api/chat/list">웹채팅창</a></li>
                     </ul>
-                </li>
+                </li>-->
             </ul>
         </nav>
 
         <!-- Section -->
         <section>
             <header class="major">
-                <h2>정보</h2>
+                <h2>문의</h2>
             </header>
             <p>메일과 깃허브 주소입니다.</p>
             <ul class="contact">
