--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -6,13 +6,12 @@
 -->
 <html>
 <head>
-    <title>최원석의 포트폴리오입니다.</title>
+    <title>CWS</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/assets/css/main.css" />
 </head>
 <body class="is-preload">
-
 <!-- Wrapper -->
 <div id="wrapper">
 
@@ -22,12 +21,9 @@
 
             <!-- Header -->
             <header id="header">
-                <a href="/" class="logo"><strong>최원석</strong> 의 포트폴리오</a>
+                <a href="/" class="logo"><strong>토익</strong> 단어장!</a>
                 <ul class="icons">
-                    <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-                    <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+                    <li><input type="button" value="구글 로그인" id = "btn-google" class="google" /></li>
+                    <li><input type="button" value="네이버 로그인" id = "btn-naver" class="naver" /></li>
                 </ul>
             </header>
