20211001 테이블 연관관계 추가 코드 개선

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -22,7 +22,7 @@
     <header class="major">
         <h2>포트폴리오 목록</h2>
     </header>
-    <div class="posts">
+    <div class="toeicWords">
         <article>
             <a href="/api/chat/list" class="image"><img src="images/socketChat.jpg" alt="채팅" /></a>
             <h3>웹소켓을 이용한 채팅</h3>
