20211018 배포 자동화 구현

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -21,7 +21,7 @@
 
             <!-- Header -->
             <header id="header">
-                <a href="/" class="logo"><strong>토익</strong> 단어장!</a>
+                <a href="/" class="logo"><strong>토익</strong> 단어장!!!!!</a>
                 {{#guestName}}
                     <input type="hidden" id="hidden-email" value="{{guestName}}"/>
                     <ul class="icons">
