--- a/src/main/resources/templates/progresspage.mustache
+++ b/src/main/resources/templates/progresspage.mustache
@@ -2,7 +2,7 @@
 <!-- Section -->
 <section>
     <header class="major">
-        <h2>학습현황</h2>
+        <h2>{{guestName}}님의 학습현황</h2>
     </header>
     <input type="hidden" id="total-count" value="{{totalCount}}"/>
     <input type="hidden" id="memo-count" value="{{memoCount}}"/>
