20211019 이름 노출 추가

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -33,7 +33,7 @@
                     {{#adminEmail}}
                         <input type="hidden" id="hidden-email" value="{{adminEmail}}"/>
                         <ul class="icons">
-                            <li><h3>ID:<strong>{{adminName}}</strong></h3></li>
+                            <li><h3>ID:<strong>{{adminEmail}}</strong></h3></li>
                             <li><input type="button" value="Logout" id = "btn-logout" class="primary" /></li>
                         </ul>
                     {{/adminEmail}}
