--- a/src/main/resources/templates/progresspage.mustache
+++ b/src/main/resources/templates/progresspage.mustache
@@ -23,8 +23,8 @@
         <article>
             <span class="icon fa-gem"></span>
             <div class="content">
-                <h3>Portitor ullamcorper</h3>
-                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                <h3>개발중</h3>
+                <!--<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>-->
             </div>
         </article>
     </div>
