20211019 이름 노출 추가

--- a/src/main/resources/templates/progresspage.mustache
+++ b/src/main/resources/templates/progresspage.mustache
@@ -17,7 +17,7 @@
 <!-- Section -->
 <section>
     <header class="major">
-        <h2>학습일지</h2>
+        <h2>개발중</h2>
     </header>
     <div class="features">
         <article>
