20211021 무중단 배포 구현

--- a/src/main/resources/templates/layout/sidebar.mustache
+++ b/src/main/resources/templates/layout/sidebar.mustache
@@ -23,7 +23,7 @@
                 {{/guestEmail}}
                 {{^guestEmail}}
                     {{#adminEmail}}
-                        <li><a href="/api/my/progress">학습현황</a></li>
+                        <li>관리자입니다.</li>
                     {{/adminEmail}}
                 {{/guestEmail}}
 <!--                <li>
