20211022 관리자 페이지 추가 암기완료시 버튼색 변경

--- a/src/main/resources/templates/layout/sidebar.mustache
+++ b/src/main/resources/templates/layout/sidebar.mustache
@@ -23,7 +23,7 @@
                 {{/guestEmail}}
                 {{^guestEmail}}
                     {{#adminEmail}}
-                        <li>관리자입니다.</li>
+                        <li><a href="/api/adminPage">관리자페이지</a></li>
                     {{/adminEmail}}
                 {{/guestEmail}}
 <!--                <li>
